--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@ html, body {
         
     }
     
-    main > .section {
+    main > .section1 {
     
         flex-basis: 65%;
         background-color: rgb(242, 227, 243);
@@ -235,7 +235,7 @@ html, body {
 
 
 /* main section  */
-.section {
+.section1 {
     display: flex;
     
     align-items: center;
@@ -296,19 +296,39 @@ html, body {
 
 .block3 {
     width: 300px;
-    height: 150px;
+    height: 50px;
 }
 .block3>div {
     width: 300px;
-    height: 150px;
+    height: 50px;
     margin-top: 2rem;
     background: cornflowerblue;
     transform:  rotateY(0deg) rotateX(0);
     transition: ease;
+    
 }
 
 .block3:hover>div {
-    background: rgb(28, 39, 61);
+    background: rgb(77, 112, 182);
     transform: perspective(400px) rotate(90deg);
     transition: 1s ease-in-out;
+}
+
+.section2 {
+    
+    
+    width: 100%;
+    height: 200px;
+    flex-grow: 1;
+    position: relative;
+   
+}
+.section2::before { 
+    content: " ";
+    width: 100%;
+    height: 3px;
+    background: #3A0842;
+    display: block;
+    position: absolute;
+    top: 50px;
 }
