--- a/css/style.css
+++ b/css/style.css
@@ -46,14 +46,10 @@ html, body {
     main {
         display: flex;   
         box-shadow: rgba(0, 0, 0, .4) 0 0 15px ; 
-        flex-grow: 1;
-        
-        
-        
+        flex-grow: 1;      
     }
     
     main > .section1 {
-    
         flex-basis: 65%;
         background-color: rgb(242, 227, 243);
         padding: 1rem;
@@ -83,6 +79,8 @@ html, body {
         max-height: 50px;
     }
 
+
+    /* FOOTER */
     .footer-content {
         display: flex;
         justify-content: space-between;
@@ -237,9 +235,12 @@ html, body {
 /* main section  */
 .section1 {
     display: flex;
-    
     align-items: center;
     flex-direction: column;
+    justify-content: space-around;
+    
+
+   
 }
 .block {
     width: 100px;
@@ -268,7 +269,7 @@ html, body {
     width: 150px;
     height: 50px;
     background: crimson;
-    margin-top: 20px;
+    
     transform: translateX(0px);
     transition: 0;
     
@@ -301,7 +302,7 @@ html, body {
 .block3>div {
     width: 300px;
     height: 50px;
-    margin-top: 2rem;
+   
     background: cornflowerblue;
     transform:  rotateY(0deg) rotateX(0);
     transition: ease;
@@ -313,14 +314,14 @@ html, body {
     transform: perspective(400px) rotate(90deg);
     transition: 1s ease-in-out;
 }
-
+/* 
 .section2 {
-    
-    
     width: 100%;
     height: 200px;
-    flex-grow: 1;
+    text-align: center;
     position: relative;
+    background: rgba(0, 0, 0, 0.11);
+    
    
 }
 .section2::before { 
@@ -330,5 +331,67 @@ html, body {
     background: #3A0842;
     display: block;
     position: absolute;
-    top: 50px;
+    top: -30px;
+    margin-bottom: 30px;
+} */
+
+/* SI 
+        DE
+             BAR */
+
+
+.sidebar-menu li a { 
+    color: #3A0842;
+    text-decoration: none;
+    padding: 10px 15px;
+    display: block;
+}             
+
+.sidebar-menu-item { 
+    display: flex;
+    flex-direction: column;
+    margin: 0 10px;
+    
+
+}
+.sidebar-menu-item li { 
+    
+    background:  rgba(58, 8, 66, 0.03); 
+    margin-top: 10px;
+    border-radius: 3px;   
+}
+.sidebar-menu-item li a { 
+    display: flex;
+    justify-content: space-between;
+    
+}
+
+.sidebar-menu-item li a i::before { 
+    content: '\e804';
+    font-family: "fontello" ;
+    font-style: normal;
+    font-weight: 100;
+    color: #3A0842; 
+}
+.sidebar-menu-item li ul li {
+    margin: 0;
+}
+.sidebar-menu-item li ul  { 
+    /* display: none; */
+    opacity: 0;
+    height: 0;
+    transform: scaleY(0);
+    transform-origin: top;
+    transition: 300ms ease;
+    
+   
+}
+
+.sidebar-menu-item li .show {
+    display: block;
+    transform: scaleY(1);
+    opacity: 1;
+    transition: 250ms ease;
+    height: 100%;
+    
 }
